[REFACTOR] providers: update way of getting watch providers